# AutoCoder

./: .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
src/autocoder/: agent.py  anticheat.py  budget.py  build.py  cli.py  config.py  epic.py  git.py  issues.py  logger.py  loop.py  pr.py  review.py  sandbox.py  server.py  task_slice.py  telemetry.py  testplan.py  types.py  verify.py
src/autocoder/prompts/: __init__.py  build_fix.md  ci_fix.md  ci_fix_arch.md  ci_learn.md  detect_build.md  impl_learn.md  implement.md  implement_brief.md  implement_with_plan.md  plan.md  prioritize.md  review.md  review_fix.md  review_multi.md  review_quality.md  review_spec_compliance.md  task_execute.md  task_plan.md  testplan.md  testplan_fix.md  update_claude_md.md  verify_fix.md
src/autocoder/prompts/agents/: architecture.md  documentation.md  implementation.md  quality.md  risks.md  simplification.md  spec_compliance.md  testing.md  tests.md
tests/: test_agent.py  test_anticheat.py  test_budget.py  test_build.py  test_ci.py  test_config.py  test_epic.py  test_git.py  test_idle_timeout.py  test_issues.py  test_logger.py  test_loop.py  test_prompts.py  test_review.py  test_sandbox.py  test_server.py  test_task_slice.py  test_telemetry.py  test_testplan.py  test_verify.py  test_worktree.py
