[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autocoder"
version = "0.1.0"
description = "Autonomous AI coding agent loop: fetches GitHub issues, resolves them with Claude Code, ships PRs"
requires-python = ">=3.11"
dependencies = ["click>=8.0"]

[project.scripts]
autocoder = "autocoder.cli:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/autocoder"]

[tool.pytest.ini_options]
testpaths = ["tests"]
